fix the wraping problem between the label and input in the date section

--- a/Static/content/app.css
+++ b/Static/content/app.css
@@ -77,6 +77,10 @@ textarea{
     margin: 10px; 
 }
 
+.dateLabelHolder {
+    display: inline-block;
+}
+
 .searchBox select{
     margin: 10px; 
 }
